alignwiden leveyteen fixi

--- a/sass/block.scss
+++ b/sass/block.scss
@@ -29,7 +29,7 @@ main {
     }
 
     .alignwide {
-      max-width: max(#{$wide-width}, 100%);
+      max-width: min(#{$wide-width}, 100%);
       margin: 1rem auto;
       padding-left: $block-padding-width;
       padding-right: $block-padding-width;
